--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=clinic
-
+server.port=8080
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 old-system.base-url=http://localhost:8081
+logging.level.web=debug
+logging.level.sql=trace
+logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace
